# Boilerplate

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  FIX_MYSQL.md  fix_mysql.sh  gunicorn_conf.py  migrate_db.py  pyproject.toml  run.py
backend/app/: main.py
backend/app/api/: admin.py  attachments.py  auth.py  conversations.py  feedback.py  messages.py  tasks.py
backend/app/core/: config.py  database.py  logging_config.py  security.py
backend/app/models/: __init__.py  attachment.py  conversation.py  feedback.py  message.py  task.py  user.py
backend/app/schemas/: attachment.py  conversation.py  feedback.py  message.py  task.py  user.py
backend/app/services/: ai_service.py  file_recognition_service.py  task_service.py
backend/migrations/: add_new_fields.sql
backend/uploads/: 2b3715d3-b9cd-4455-853b-59302e7d8d32.md
frontend/: create-env-files.sh  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue
frontend/src/api/: attachments.ts  auth.ts  conversations.ts  feedback.ts  messages.ts  tasks.ts
frontend/src/components/: ChatInput.vue  FileUpload.vue  LoadingSpinner.vue  MessageBubble.vue
frontend/src/router/: index.ts
frontend/src/store/: auth.ts  conversations.ts
frontend/src/utils/: polling.ts  request.ts
frontend/src/views/: Admin.vue  Chat.vue  Feedback.vue  Login.vue  Register.vue
