[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncmy>=0.2.9",  # MySQL 异步驱动
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.12",
    "httpx>=0.27.0",
    "loguru>=0.7.0",
    "python-dotenv>=1.0.1",
    "aiohttp>=3.10.11",
    "gunicorn>=23.0.0",
    "pillow>=10.0.0",
    "aiofiles>=23.0.0",
]
